Fix roll button on mobile

--- a/src/views/Room/RollButton/styles.css
+++ b/src/views/Room/RollButton/styles.css
@@ -9,6 +9,10 @@
   border-radius: 12px !important;
 }
 
+.dice-roller > div {
+  width: 100%;
+}
+
 .dice-roller button {
   background: #0284c7 !important;
   background-color: #0284c7 !important;
